Basic implementation of user roles.

--- a/app/views/lobby/index.html.erb
+++ b/app/views/lobby/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Songdown</h1>
 
 <%= link_to 'Login', login_path %> |
+<%= link_to 'Register', register_path %> |
 <%= link_to 'About', about_path %>
