--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,12 @@
       Hi
 
       <%= @current_user.username %> |
+      <%= link_to 'Songs', songs_path %> |
       <%= link_to 'Profile', profile_path %> |
       <%= link_to 'Settings', settings_path %> |
+      <% if @current_user.is_admin %>
+        <%= link_to 'Admin', admin_path %> |
+      <% end %>
       <%= link_to 'Log out', logout_path %>
     </p>
   <% end %>
