--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,14 @@
       Hi
 
       <%= @current_user.username %> |
+      <%= link_to 'Home', home_path %> |
       <%= link_to 'Songs', songs_path %> |
+      <% if @current_user.is_editor? %>
+        <%= link_to 'Setlists', setlists_path %> |
+      <% end %>
       <%= link_to 'Profile', profile_path %> |
       <%= link_to 'Settings', settings_path %> |
-      <% if @current_user.is_admin %>
+      <% if @current_user.is_admin? %>
         <%= link_to 'Admin', admin_path %> |
       <% end %>
       <%= link_to 'Log out', logout_path %>
