--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -4,7 +4,7 @@
   This is the song index page. It will display some interesting information such as the top 10 most viewed songs as well as the 10 newest songs added to the site. There will also be a link to the all songs page. Bonus points if a search feature can be implemented.
 </p>
 
-<% if @current_user.is_editor %>
+<% if @current_user.is_editor? %>
   <%= link_to 'New Song', new_song_path %>
 <% end %>
 
