Finished up CRUD operations for setlist.

--- a/app/views/setlists/show.html.erb
+++ b/app/views/setlists/show.html.erb
@@ -1,6 +1,16 @@
 <h1><%= @setlist.title %> (<%= @setlist.date %>)</h1>
 
-<%= link_to 'Edit Setlist', edit_setlist_path(@setlist) %>
+<% if @current_user.is_editor? %>
+  <p>
+    <%= link_to 'Edit Setlist', edit_setlist_path(@setlist) %> |
+    <%= link_to 'Delete Setlist', setlist_path(@setlist),
+      :method => 'delete',
+      :data => {
+        :confirm => "Are you sure you want to delete \"#{@setlist.title}\"?"
+      }
+    %>
+  </p>
+<% end %>
 
 <% if !@setlist.notes.empty? %>
   <p style="white-space: pre;"><%= @setlist.notes %></p>
