--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,9 +1,5 @@
 <h1>Home</h1>
 
-<!-- In this file we want the following:
-  - Top 10 songs
--->
-
 <% if @current_user.is_editor? %>
   <p>
     <%= link_to 'Create Song', new_song_path %> |
@@ -23,5 +19,11 @@
 <p>
   <h2>Top Songs</h2>
 
-  <!-- TODO -->
+  <ol>
+    <% @top_songs.each do |song| %>
+      <li>
+        <%= link_to "#{song.artist} - #{song.title}", song %> - <%= pluralize song.views, 'view' %>
+      </li>
+    <% end %>
+  </ol>
 </p>
