--- a/app/assets/stylesheets/songs.scss
+++ b/app/assets/stylesheets/songs.scss
@@ -1,3 +1,32 @@
 // Place all the styles related to the songs controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.sd-song {
+  font-size: 16px;
+  font-family: monospace;
+}
+
+.sd-verse-header {
+  text-decoration: underline;
+  margin-left: 5%;
+}
+
+.sd-verse-block {
+  page-break-after: avoid;
+  margin-left: 10%;
+}
+
+.sd-lyrics-line {
+  white-space: pre;
+}
+
+.sd-chords-line {
+  font-weight: bold;
+  white-space: pre;
+}
+
+.sd-goto {
+  text-decoration: underline;
+  font-style: italic;
+}
