Handle keys better + other fixes. Closes #11

--- a/app/views/setlist_items/_form.html.erb
+++ b/app/views/setlist_items/_form.html.erb
@@ -9,17 +9,17 @@
     <%= f.label 'Key:' %>
     <%= f.select :key, [
       ['C major / A minor', 'C'],
-      ['D major / B minor', 'C'],
-      ['E major / C# minor', 'C'],
-      ['F major / D minor', 'C'],
-      ['G major / E minor', 'C'],
-      ['A major / F# minor', 'C'],
-      ['B major / G# minor', 'C'],
-      ['Db major / Bb minor', 'C'],
-      ['Eb major / C minor', 'C'],
-      ['Gb major / Eb minor', 'C'],
-      ['Ab major / F minor', 'C'],
-      ['Bb major / G minor', 'C'],
+      ['Db major / Bb minor', 'Db'],
+      ['D major / B minor', 'D'],
+      ['Eb major / C minor', 'Eb'],
+      ['E major / C# minor', 'E'],
+      ['F major / D minor', 'F'],
+      ['Gb major / Eb minor', 'Gb'],
+      ['G major / E minor', 'G'],
+      ['Ab major / F minor', 'Ab'],
+      ['A major / F# minor', 'A'],
+      ['Bb major / G minor', 'Bb'],
+      ['B major / G# minor', 'B'],
     ] %>
   </p>
 
