--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -12,6 +12,24 @@
   </p>
 
   <p>
+    <%= f.label 'Key:' %>
+    <%= f.select :key, [
+      ['C major / A minor', 'C'],
+      ['Db major / Bb minor', 'Db'],
+      ['D major / B minor', 'D'],
+      ['Eb major / C minor', 'Eb'],
+      ['E major / C# minor', 'E'],
+      ['F major / D minor', 'F'],
+      ['Gb major / Eb minor', 'Gb'],
+      ['G major / E minor', 'G'],
+      ['Ab major / F minor', 'Ab'],
+      ['A major / F# minor', 'A'],
+      ['Bb major / G minor', 'Bb'],
+      ['B major / G# minor', 'B'],
+    ] %>
+  </p>
+
+  <p>
     <%= f.label 'Song' %>
     <br />
     <%= f.text_area :content %>
