--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,17 +1,23 @@
 <h1><%= @song.full_name %></h1>
 
-<% if @current_user.is_editor? %>
-  <%= link_to 'Back to Songs', songs_path %> |
-  <%= link_to 'Edit Song', edit_song_path(@song) %> |
-  <%= link_to 'Delete Song', song_path(@song),
-    :method => :delete,
-    :data => {
-      :confirm => "Are you sure you want to delete \"#{@song.full_name}\"?"
-    }
-  %>
-<% else %>
-  <%= link_to 'Back to Songs', songs_path %>
-<% end %>
+<p>
+  <strong>Key:</strong> <%= @song.key %>
+</p>
+
+<p>
+  <% if @current_user.is_editor? %>
+    <%= link_to 'Back to Songs', songs_path %> |
+    <%= link_to 'Edit Song', edit_song_path(@song) %> |
+    <%= link_to 'Delete Song', song_path(@song),
+      :method => :delete,
+      :data => {
+        :confirm => "Are you sure you want to delete \"#{@song.full_name}\"?"
+      }
+    %>
+  <% else %>
+    <%= link_to 'Back to Songs', songs_path %>
+  <% end %>
+</p>
 
 <div>
 <%= @song.to_html.html_safe %>
