--- a/app/views/setlists/edit.html.erb
+++ b/app/views/setlists/edit.html.erb
@@ -1,3 +1,7 @@
-<h1>Edit Setlist</h1>
+<div class="header">
+  <h1>Edit Setlist</h1>
+</div>
 
-<%= render 'form' %>
+<div class="content">
+  <%= render 'form' %>
+</div>
