--- a/app/assets/stylesheets/setlists.scss
+++ b/app/assets/stylesheets/setlists.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the Setlists controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#setlist_notes_input {
+  width: 60%;
+  height: 300px;
+  resize: none;
+}
