--- a/app/views/setlist_items/_form.html.erb
+++ b/app/views/setlist_items/_form.html.erb
@@ -1,54 +1,83 @@
-<%= form_for @setlist_item, :url => setlist_setlist_items_path do |f| %>
 
-  <p>
-    <%= f.label 'Song Chosen:' %>
-    <%= f.text_field :title, :readonly => true %>
-  </p>
+<%= form_for @setlist_item,
+  :url => setlist_setlist_items_path,
+  :html => {
+    :class => 'pure-form pure-form-stacked'
+  } do |f| %>
 
-  <p>
-    <%= f.label 'Key:' %>
-    <%= f.select :key, [
-      ['C major / A minor', 'C'],
-      ['Db major / Bb minor', 'Db'],
-      ['D major / B minor', 'D'],
-      ['Eb major / C minor', 'Eb'],
-      ['E major / C# minor', 'E'],
-      ['F major / D minor', 'F'],
-      ['Gb major / Eb minor', 'Gb'],
-      ['G major / E minor', 'G'],
-      ['Ab major / F minor', 'Ab'],
-      ['A major / F# minor', 'A'],
-      ['Bb major / G minor', 'Bb'],
-      ['B major / G# minor', 'B'],
-    ] %>
-  </p>
+  <div class="pure-g">
 
-  <%= f.hidden_field :song_id %>
-  <%= f.hidden_field :artist %>
+    <div class="pure-u-1-3">
+      <%= f.label 'Song' %>
+      <%= f.text_field :title, :readonly => true, :style => 'width: 100%;' %>
 
-  <p>
-    <%= f.submit 'Add Song to Setlist' %>
-  </p>
-<% end %>
+      <!-- These guys are hidden so it doesn't matter where they get lumped -->
+      <%= f.hidden_field :song_id %>
+      <%= f.hidden_field :artist %>
+    </div>
 
-<% if @setlist_item.errors.any? %>
-  <h1>Error</h1>
+    <div class="pure-u-1-3">
+      <%= f.label 'Key' %>
+      <%= f.select :key, [
+        ['C major / A minor', 'C'],
+        ['Db major / Bb minor', 'Db'],
+        ['D major / B minor', 'D'],
+        ['Eb major / C minor', 'Eb'],
+        ['E major / C# minor', 'E'],
+        ['F major / D minor', 'F'],
+        ['Gb major / Eb minor', 'Gb'],
+        ['G major / E minor', 'G'],
+        ['Ab major / F minor', 'Ab'],
+        ['A major / F# minor', 'A'],
+        ['Bb major / G minor', 'Bb'],
+        ['B major / G# minor', 'B'],
+      ], {}, :style => 'width: 100%' %>
+    </div>
 
-  <ul>
-    <% for error_message in @setlist_item.errors.full_messages %>
-      <li>
-        <%= error_message %>
-      </li>
+    <div class="pure-u-1-3">
+      <%= f.label 'Invisible label to align button', :style => 'visibility: hidden;' %>
+      <%= f.submit 'Select Song',
+        :class => 'pure-button pure-button-primary',
+        :style => 'width: 100%;'
+      %>
+    </div>
+
+    <% if @setlist_item.errors.any? %>
+      <div class="pure-u-1-1">
+        <h2>Errors:</h2>
+
+        <ul>
+          <% for error_message in @setlist_item.errors.full_messages %>
+            <li>
+              <%= error_message %>
+            </li>
+          <% end %>
+        </ul>
+      </div>
     <% end %>
-  </ul>
+  </div>
 <% end %>
 
-<hr />
+<div class="pure-g">
+  <div class="pure-u-1-1">
+    <%= form_tag api_search_songs_path,
+      :method => 'post',
+      :remote => true,
+      :class => 'pure-form',
+      :id => 'find_song' do
+    %>
+      <h2>Find a Song</h2>
 
-<%= form_tag api_search_songs_path, :method => 'post', :remote => true, :id => 'find_song' do %>
-  <%= label_tag :query, 'Find by title:' %>
-  <%= text_field_tag :query, '', :autocomplete => 'off' %>
-  <%= submit_tag 'Search' %>
-<% end %>
+      <%= text_field_tag :query, '',
+        :autocomplete => 'off',
+        :placeholder => 'Enter query'
+      %>
 
-<div id="results"></div>
+      <%= submit_tag 'Search', :class => 'pure-button pure-button-primary' %>
+    <% end %>
+  </div>
+
+  <div class="pure-u-1-1">
+    <div id="results"></div>
+  </div>
+</div>
