--- a/app/views/setlists/show.html.erb
+++ b/app/views/setlists/show.html.erb
@@ -1,37 +1,93 @@
-<h1>[<%= @setlist.date %>] <%= @setlist.title %></h1>
+<div class="header">
+  <h1><%= @setlist.title %></h1>
+  <h2><%= @setlist.date %></h2>
+</div>
 
-<% if @current_user.is_editor? %>
-  <p>
-    <%= link_to 'Edit Setlist', edit_setlist_path(@setlist) %> |
-    <%= link_to 'Delete Setlist', setlist_path(@setlist),
-      :method => 'delete',
-      :data => {
-        :confirm => "Are you sure you want to delete \"#{@setlist.title}\"?"
-      }
-    %>
-  </p>
-<% end %>
+<div class="content">
+  <div class="pure-g">
+    <div class="pure-u-2-3">
+      <% if !@setlist.notes.empty? %>
+        <div>
+          <h2>Notes</h2>
+          <div style="white-space: pre;"><%= @setlist.notes %></div>
+        </div>
+      <% end %>
+    </div>
 
-<% if !@setlist.notes.empty? %>
-  <p style="white-space: pre;"><%= @setlist.notes %></p>
-<% end %>
+    <div class="pure-u-1-3">
+      <% if @current_user.is_editor? && @current_user.owns_setlist?(@setlist) %>
+        <div>
+          <%= link_to 'Edit Setlist', edit_setlist_path(@setlist), :class => 'fancy-link' %> |
+          <%= link_to 'Delete Setlist', setlist_path(@setlist),
+            :method => 'delete',
+            :class => 'fancy-link',
+            :data => {
+              :confirm => "Are you sure you want to delete \"#{@setlist.title}\"?"
+            }
+          %>
+        </div>
+      <% end %>
+    </div>
 
-<h1>Songs</h1>
+    <div class="pure-u-2-3">
+      <h2>Songs</h2>
 
-<%= link_to 'Add Song', new_setlist_setlist_item_path(:setlist_id => @setlist.id) %>
+      <table class="pure-table pure-table-bordered">
+        <thead>
+          <tr>
+            <th>
+              Key
+            </th>
 
-<ul>
-  <% @setlist.setlist_items.each do |song| %>
-    <li>
-      <%= link_to song.title, song_path(song.song_id) %>
-      (key: <%= song.key %>)
-      (<%=
-        link_to 'remove', setlist_setlist_item_path(:setlist_id => @setlist.id, :id => song.id),
-          :method => 'delete',
-          :data => {
-            :confirm => "Are you sure you want to remove \"#{song.title}\" from the setlist?"
-          }
-      %>)
-    </li>
-  <% end %>
-</ul>
+            <th>
+              Song
+            </th>
+
+            <% if @current_user.is_editor? && @current_user.owns_setlist?(@setlist) %>
+              <th>
+                Remove
+              </th>
+            <% end %>
+          </tr>
+        </thead>
+
+        <tbody>
+          <% @setlist.setlist_items.each do |song| %>
+            <tr>
+              <td>
+                <%= song.key %>
+              </td>
+
+              <td>
+                <%= link_to song.full_name, song_path(song.song_id), :class => 'fancy-link' %>
+              </td>
+
+              <% if @current_user.is_editor? && @current_user.owns_setlist?(@setlist) %>
+                <td>
+                  <%= link_to 'Remove',
+                    setlist_setlist_item_path(:setlist_id => @setlist.id, :id => song.id),
+                    :method => 'delete',
+                    :class => 'pure-button pure-button-primary',
+                    :data => {
+                      :confirm =>
+                        "Are you sure you want to remove \"#{song.title}\" from the setlist?"
+                    }
+                  %>
+                </td>
+              <% end %>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+
+    <div class="pure-u-1-3">
+      <% if @current_user.is_editor? && @current_user.owns_setlist?(@setlist) %>
+        <%= link_to 'Add Song', new_setlist_setlist_item_path(:setlist_id => @setlist.id),
+          :class => 'pure-button pure-button-primary',
+          :style => 'margin-top: 0.83em;'
+        %>
+      <% end %>
+    </div>
+  </div>
+</div>
