--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -1,53 +1,51 @@
-<%= form_for @song do |f| %>
-  <p>
-    <%= f.label :artist %>
-    <br />
-    <%= f.text_field :artist %>
-  </p>
+<div class="pure-g">
+  <div class="pure-u-1-1">
+    <%= form_for @song, :html => {:class => 'pure-form pure-form-stacked'} do |f| %>
+      <%= f.label :artist %>
+      <%= f.text_field :artist, :placeholder => 'Artist' %>
 
-  <p>
-    <%= f.label :title %>
-    <br />
-    <%= f.text_field :title %>
-  </p>
+      <%= f.label :title %>
+      <%= f.text_field :title, :placeholder => 'Title' %>
 
-  <p>
-    <%= f.label 'Key:' %>
-    <%= f.select :key, [
-      ['C major / A minor', 'C'],
-      ['Db major / Bb minor', 'Db'],
-      ['D major / B minor', 'D'],
-      ['Eb major / C minor', 'Eb'],
-      ['E major / C# minor', 'E'],
-      ['F major / D minor', 'F'],
-      ['Gb major / Eb minor', 'Gb'],
-      ['G major / E minor', 'G'],
-      ['Ab major / F minor', 'Ab'],
-      ['A major / F# minor', 'A'],
-      ['Bb major / G minor', 'Bb'],
-      ['B major / G# minor', 'B'],
-    ] %>
-  </p>
+      <%= f.label :key %>
+      <%= f.select :key, [
+        ['C major / A minor', 'C'],
+        ['Db major / Bb minor', 'Db'],
+        ['D major / B minor', 'D'],
+        ['Eb major / C minor', 'Eb'],
+        ['E major / C# minor', 'E'],
+        ['F major / D minor', 'F'],
+        ['Gb major / Eb minor', 'Gb'],
+        ['G major / E minor', 'G'],
+        ['Ab major / F minor', 'Ab'],
+        ['A major / F# minor', 'A'],
+        ['Bb major / G minor', 'Bb'],
+        ['B major / G# minor', 'B'],
+      ] %>
 
-  <p>
-    <%= f.label 'Song' %>
-    <br />
-    <%= f.text_area :content %>
-  </p>
+      <%= f.label :song %>
+      <%= f.text_area :content,
+        :autocomplete => 'off',
+        :id => 'songdown_input_field'
+      %>
 
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
-
-<% if @song.errors.any? %>
-  <h1>Error</h1>
-
-  <ul>
-    <% for error_message in @song.errors.full_messages %>
-      <li>
-        <%= error_message %>
-      </li>
+      <p>
+        <%= f.submit :class => 'pure-button pure-button-primary' %>
+      </p>
     <% end %>
-  </ul>
-<% end %>
+  </div>
+
+  <div class="pure-u-1-2">
+    <% if @song.errors.any? %>
+      <h1>Error</h1>
+
+      <ul>
+        <% for error_message in @song.errors.full_messages %>
+          <li>
+            <%= error_message %>
+          </li>
+        <% end %>
+      </ul>
+    <% end %>
+  </div>
+</div>
