--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,20 +1,35 @@
-<h1>Songs</h1>
+<div class="header">
+  <h1>All Songs</h1>
+</div>
 
-<p>
-  <%= form_tag songs_path, :method => 'get' do %>
-    <%= text_field_tag :query, params[:query] || '', :autocomplete => 'off' %>
-    <%= submit_tag 'Search' %>
-  <% end %>
-</p>
+<div class="content">
+  <div class="pure-g">
+    <div class="pure-u-1-2">
+      <%= render 'search' %>
+    </div>
 
-<% if @current_user.is_editor? %>
-  <%= link_to 'New Song', new_song_path %>
-<% end %>
+    <div class="pure-u-1-2">
+      <% if @current_user.is_editor? %>
+        <div style="text-align: right; margin-top: 0.83em;">
+          <%= link_to 'New Song', new_song_path, :class => 'pure-button pure-button-primary' %>
+        </div>
+      <% end %>
+    </div>
 
-<ul>
-  <% @songs.each do |song| %>
-    <li>
-      <%= link_to "#{song.artist} - #{song.title}", song %>
-    </li>
-  <% end %>
-</ul>
+    <% @artists.each do |artist| %>
+      <div class="pure-u-1-3">
+        <fieldset>
+          <legend><h2 style="padding: 0 10px;"><%= artist %></h2></legend>
+
+          <ul class="songlist">
+            <% @songlist[artist].each do |song| %>
+              <li>
+                <%= link_to song.title, song, :class => 'fancy-link' %>
+              </li>
+            <% end %>
+          </ul>
+        </fieldset>
+      </div>
+    <% end %>
+  </div>
+</div>
