--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Song</h1>
+<div class="header">
+  <h1>New Song</h1>
+</div>
 
-<%= link_to 'Back to Songs', songs_path %>
-
-<%= render 'form' %>
+<div class="content">
+  <%= render 'form' %>
+</div>
