--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,24 +1,34 @@
-<h1><%= @song.full_name %></h1>
+<div class="header">
+  <h1><%= @song.full_name %></h1>
+</div>
 
-<p>
-  <strong>Key:</strong> <%= @song.key %>
-</p>
+<div class="content">
+  <div class="pure-g">
+    <div class="pure-u-2-3"></div>
 
-<p>
-  <% if @current_user.is_editor? %>
-    <%= link_to 'Back to Songs', songs_path %> |
-    <%= link_to 'Edit Song', edit_song_path(@song) %> |
-    <%= link_to 'Delete Song', song_path(@song),
-      :method => :delete,
-      :data => {
-        :confirm => "Are you sure you want to delete \"#{@song.full_name}\"?"
-      }
-    %>
-  <% else %>
-    <%= link_to 'Back to Songs', songs_path %>
-  <% end %>
-</p>
+    <div class="pure-u-1-3">
+      <% if @current_user.is_editor? %>
+        <%= link_to 'Edit Song', edit_song_path(@song), :class => 'fancy-link' %> |
+        <%= link_to 'Delete Song', song_path(@song),
+          :method => :delete,
+          :class => 'fancy-link',
+          :data => {
+            :confirm => "Are you sure you want to delete \"#{@song.full_name}\"?"
+          }
+        %>
+      <% end %>
 
-<div>
-<%= @song.to_html.html_safe %>
+      <div>
+        <strong>Key:</strong> <%= @song.key %>
+      </div>
+
+      <div>
+        <strong>Views:</strong> <%= @song.views %>
+      </div>
+    </div>
+
+    <div class="pure-u-1-1">
+      <%= @song.to_html.html_safe %>
+    </div>
+  </div>
 </div>
