--- a/app/views/users/settings.html.erb
+++ b/app/views/users/settings.html.erb
@@ -1,9 +1,11 @@
-<h1>Settings</h1>
+<div class="header">
+  <h1>Settings</h1>
+</div>
 
-<p>
+<div class="content">
   <strong>Features:</strong>
 
   <ul>
     <li>Change account details (username, password, email)</li>
   </ul>
-</p>
+</div>
