--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -19,16 +19,37 @@
       <% end %>
 
       <div>
-        <strong>Key:</strong> <%= @song.key %>
-      </div>
-
-      <div>
         <strong>Views:</strong> <%= @song.views %>
       </div>
+
+      <%= form_tag song_path(@song), :class => 'pure-form pure-form-stacked', :method => 'get' do %>
+        <strong>
+          <%= label_tag 'Key:' %>
+        </strong>
+
+        <%= select_tag :key,
+          options_for_select([
+            ['C major / A minor', 'C'],
+            ['Db major / Bb minor', 'Db'],
+            ['D major / B minor', 'D'],
+            ['Eb major / C minor', 'Eb'],
+            ['E major / C# minor', 'E'],
+            ['F major / D minor', 'F'],
+            ['Gb major / Eb minor', 'Gb'],
+            ['G major / E minor', 'G'],
+            ['Ab major / F minor', 'Ab'],
+            ['A major / F# minor', 'A'],
+            ['Bb major / G minor', 'Bb'],
+            ['B major / G# minor', 'B'],
+          ], @song_key),
+          :style => 'width: 100%',
+          :onchange => 'this.form.submit()'
+        %>
+      <% end %>
     </div>
 
     <div class="pure-u-1-1">
-      <%= @song.to_html.html_safe %>
+      <%= @song_html.html_safe %>
     </div>
   </div>
 </div>
