--- a/app/views/setlists/_form.html.erb
+++ b/app/views/setlists/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @setlist, :html => {:class => 'pure-form pure-form-stacked'} do |f| %>
+<%= form_for @setlist, :html => {:class => 'pure-form pure-form-stacked sd-form'} do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title, :placeholder => 'Title' %>
 
