--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -4,7 +4,9 @@
 
 <div class="content">
   <div class="pure-g">
-    <div class="pure-u-2-3"></div>
+    <div class="pure-u-2-3">
+      <%= embed_youtube(@song.youtube_url) %>
+    </div>
 
     <div class="pure-u-1-3">
       <% if @current_user.is_editor? %>
