--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,30 +1,35 @@
 <h1>Sign Up</h1>
 
-<%= form_for @user, :url => {controller: 'users', action: 'create'} do |f| %>
+<%= form_for @user, 
+  :url => {controller: 'users', action: 'create'}, 
+  :html => {:class => 'pure-form pure-form-stacked'} do |f| 
+%>
   <p>
-    Username:</br>
+    <%= f.label :username %>
     <%= f.text_field :username %>
   </p>
 
   <p>
-    Email:</br>
+    <%= f.label :email %>
     <%= f.text_field :email %>
   </p>
 
   <p>
-    Confirm email:</br>
+    <%= f.label :email_confirmation, 'Confirm Email' %>
     <%= f.text_field :email_confirmation %>
   </p>
 
-  <p> Password:</br>
+  <p>
+    <%= f.label :password %>
     <%= f.password_field :password %>
   </p>
 
-  <p> Confirm password:</br>
+  <p>
+    <%= f.label :password_confirmation, 'Confirm Password' %>
     <%= f.password_field :password_confirmation%>
   </p>
 
-  <%= f.submit %>
+  <%= f.submit :class => 'pure-button pure-button-primary' %>
 <% end %>
 
 <% if @user.errors.any? %>
