Use bower-rails to manage assets.

--- a/app/views/lobby/about.html.erb
+++ b/app/views/lobby/about.html.erb
@@ -1,9 +1,15 @@
-<h1>This is the "About 1vasari" page</h1>
+<div class="header">
+  <h1>About</h1>
+</div>
 
-<p>
-  Stay tuned for more awesomeness.
-</p>
+<div class="content">
+  <p>
+    Songdown is a creation of 1vasari.
+  </p>
 
-<p>
-  <%= link_to 'Back Home', root_path %>
-</p>
+  <!-- Insert image of me here... -->
+
+  <p>
+    <%= link_to 'Back Home', root_path, :class => 'fancy-link' %>
+  </p>
+</div>
