--- a/app/views/lobby/index.html.erb
+++ b/app/views/lobby/index.html.erb
@@ -1,5 +1,9 @@
-<h1>Songdown</h1>
+<div class="header">
+  <h1>Songdown</h1>
+</div>
 
-<%= link_to 'Login', login_path %> |
-<%= link_to 'Register', register_path %> |
-<%= link_to 'About', about_path %>
+<div class="content">
+  <%= link_to 'Login', login_path %> |
+  <%= link_to 'Register', register_path %> |
+  <%= link_to 'About', about_path %>
+</div>
