--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,10 @@
 
         <ul class="pure-menu-list">
           <li class="pure-menu-item">
+            <%= link_to 'About', about_path, :class => 'pure-menu-link' %>
+          </li>
+          
+          <li class="pure-menu-item">
             <%= link_to 'Home', home_path, :class => 'pure-menu-link' %>
           </li>
 
