--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,82 +1,35 @@
 <!DOCTYPE html>
 
 <html lang="en">
-<head>
-  <title>Songdown</title>
+  <head>
+    <title>Songdown</title>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <%= stylesheet_link_tag 'https://fonts.googleapis.com/css?family=Roboto+Mono',
-    'data-turbolinks-track' => true
-  %>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= stylesheet_link_tag    'side-menu', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
+    <%= stylesheet_link_tag 'https://fonts.googleapis.com/css?family=Roboto+Mono',
+      'data-turbolinks-track' => true
+    %>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= stylesheet_link_tag    'side-menu', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
+  </head>
 
-<body>
-  <div id="layout">
-    <!-- Menu toggle -->
-    <a href="#menu" id="menuLink" class="menu-link">
-      <!-- Hamburger icon -->
-      <span></span>
-    </a>
+  <body>
+    <div id="layout">
+      <%= render 'layouts/menu'%>
 
-    <div id="menu">
-      <div class="pure-menu">
-        <%= link_to 'Songdown', home_path, :class => 'pure-menu-heading' %>
-
-        <ul class="pure-menu-list">
-          <li class="pure-menu-item">
-            <%= link_to 'About', about_path, :class => 'pure-menu-link' %>
-          </li>
-          
-          <li class="pure-menu-item">
-            <%= link_to 'Home', home_path, :class => 'pure-menu-link' %>
-          </li>
-
-          <li class="pure-menu-item">
-            <%= link_to 'Songs', songs_path, :class => 'pure-menu-link' %>
-          </li>
-
-          <% if @current_user.is_editor? %>
-            <li class="pure-menu-item">
-              <%= link_to 'Setlists', setlists_path, :class => 'pure-menu-link' %>
-            </li>
+      <div id="main">
+        <p>
+          <% flash.each do |name, message| %>
+            <%= content_tag :div, message, :class => name %>
           <% end %>
+        </p>
 
-          <li class="pure-menu-item">
-            <%= link_to 'Settings', settings_path, :class => 'pure-menu-link' %>
-          </li>
-
-          <% if @current_user.is_admin? %>
-            <li class="pure-menu-item">
-              <%= link_to 'Admin', admin_path, :class => 'pure-menu-link' %>
-            </li>
-          <% end %>
-
-          <li class="pure-menu-item">
-            <%= link_to 'Logout', logout_path, :class => 'pure-menu-link' %>
-          </li>
-        </ul>
+        <%= yield %>
       </div>
+
+      <%= render 'layouts/footer' %>
     </div>
-
-    <div id="main">
-      <!-- I don't know what the fuck to do with this -->
-      <p>
-        <% flash.each do |name, message| %>
-          <%= content_tag :div, message, :class => name %>
-        <% end %>
-      </p>
-
-      <%= yield %>
-    </div>
-
-    <footer style="text-align: center;">
-      Logged in as <%= @current_user.username %>
-    </footer>
-  </div>
-</body>
+  </body>
 </html>
