--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -36,6 +36,11 @@
       %>
 
       <p>
+        Don't know what this is?
+        <%= link_to 'Click here', help_songdown_syntax_path, :class => 'fancy-link', :target => '_blank' %>.
+      </p>
+
+      <p>
         <%= f.submit :class => 'pure-button pure-button-primary' %>
       </p>
     <% end %>
