Implemented Songdown editor. Closes #25

--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -25,6 +25,10 @@
         <% end %>
 
         <li class="pure-menu-item">
+          <%= link_to 'Editor', editor_path, :class => 'pure-menu-link' %>
+        </li>
+
+        <li class="pure-menu-item">
           <%= link_to 'Settings', settings_path, :class => 'pure-menu-link' %>
         </li>
 
