Use Songdown.postData() rather than $.ajax

--- a/app/views/setlists/show.html.erb
+++ b/app/views/setlists/show.html.erb
@@ -46,7 +46,7 @@
         </thead>
 
         <tbody>
-          <% @setlist.setlist_items.each do |song| %>
+          <% @setlist_items.each do |song| %>
             <tr>
               <td>
                 <%= song.key %>
